--- a/style.css
+++ b/style.css
@@ -7,53 +7,40 @@
 body {
   font-family: "Outfit", sans-serif;
   background-color: hsl(212, 45%, 89%);
-  font-size: 18px;
 
   display: flex;
   justify-content: center;
   align-items: center;
-
-  min-height: 100vh;
+  height: 100vh;
 }
 
-@media (min-width: 600px) {
-  .card-title {
-    font-size: 20px;
-  }
-}
-
-.qr-card {
-  width: 90%;
-  max-width: 320px;
+.qr-code-card {
+  width: 320px;
   background-color: hsl(0, 0%, 100%);
+  padding: 15px;
   border-radius: 20px;
-  padding: 16px;
-  box-shadow: 0 25px 25px hsla(217, 54%, 11%, 0.15);
-  margin-top: 1 rem;
+  box-shadow: 0 12px 24px 0 rgba(0, 0, 0, 0.1);
 }
 
-.qr-code-img {
+.card-img {
   width: 100%;
   border-radius: 10px;
 }
 
 .card-text {
-  padding: 10px;
   text-align: center;
+  padding: 20px;
 }
 
 .card-title {
-  color: hsl(218, 44%, 22%);
-  font-size: 20px;
+  font-size: 21px;
   font-weight: 700;
-  line-height: 1.2;
-  margin: 0 0 16px 0;
+  color: hsl(218, 44%, 22%);
+  margin-bottom: 10px;
 }
 
 .card-subtitle {
-  color: hsl(216, 15%, 48%);
   font-size: 15px;
   font-weight: 400;
-  line-height: 1.3;
-  margin: 0;
+  color: hsl(216, 15%, 48%);
 }
